[project]
name = "fires-service"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "uvicorn>=0.42.0",
    "disaster-shared",
]


[tool.uv]
package = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["T201", "D203", "D212", "COM812"]

[tool.ty.src]
include = [
    "src",
]
